# Agile-development-AST

./: .gitignore  README.md  software_requirements.md
.github/workflows/: CI.yml  go.yml  multi_robot_CI.yml
IsaacSim/: robile_simulation.usd  simulators.ipynb
IsaacSim/URDF/: 4_wheel_config.urdf  model-2.urdf
IsaacSim/URDF/4_wheel_config/: 4_wheel_config.usd
IsaacSim/simulation_ws/install/: local_setup.bat  local_setup.ps1  setup.bat  setup.ps1
multirob_ws/: .gitignore  frames_2024-08-21_03.07.56.gv
multirob_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
multirob_ws/log/: latest_build
multirob_ws/src/launch/: launch_robile.launch.py  second_robile.launch.py  world.launch.py
multirob_ws/src/multirobot/: setup.cfg  setup.py
ros1_smach/src/my_package_name/: CMakeLists.txt  package.xml  script.py
ros2_ast/src/pkg_move/: package.xml  setup.py
ros2_ast/src/pkg_perceive_plane/: package.xml  setup.cfg  setup.py
ros2_ast/src/pkg_pick/: package.xml  setup.cfg  setup.py
ros2_ast/src/pkg_place/: package.xml  setup.cfg  setup.py
ros2_ast/src/robot/: package.xml  setup.py
ros2_smach/src/state_machine/: CMakeLists.txt  package.xml  setup.py
ros2_smach/src/state_machine/state_machine/: state_machine.py
ros2_smach/src/state_machine/test/: test_state_machine.py
ros2_smach/test/: test_state_machine.py
uml_observer/: uml.py
user_stories/: user_story1.md  user_story10.md  user_story2.md  user_story3.md  user_story4.md  user_story5.md  user_story6.md  user_story7.md  user_story8.md  user_story9.md  user_story_template.md
(+50 files in other folders)
